[package]
authors = ["Ryan Summers <ryan.summers@vertigo-designs.com>"]
edition = "2018"
readme = "README.md"
name = "shared-bus-example"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.3"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32h7xx-hal = { version = "0.6.0", features = ["stm32h743v", "rt"] }
cortex-m-rtic = "0.5.3"
nb = "0.1.2"
embedded-hal = "0.2.4"

[dependencies.shared-bus]
git = "https://github.com/ryan-summers/shared-bus"
features = ["cortex-m"]

[dependencies.si7021]
git = "https://github.com/ryan-summers/si7021-rs"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
